# massai

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  OPEN_QUESTIONS.md  PRD.md  README.md  REQUEST.md  blockchain.md  docker-compose.dev.yml  docker-compose.yml  error.md  package.json  pnpm-lock.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  auth.py  blockchain.py  config.py  connection_manager.py  contracts.py  database.py  dependencies.py  exception_handlers.py  formatting.py  health.py  logging.py  response.py  schema_validator.py  token_cache.py
backend/app/models/: __init__.py  alert.py  base.py  blockchain_event.py  contract.py  ingest_profile.py  milestone.py  notification.py  status_update.py
backend/app/pilot_schemas/: e4m_update.json  factor_update.json  pilot_test_update.json  tasowheel_update.json
backend/app/schemas/: __init__.py  admin.py  alert.py  analytics.py  audit.py  contract.py  document.py  ingest.py  ingest_profile.py  ingest_v2.py  milestone.py  notification.py  timeline.py
backend/app/seeds/: __init__.py  seed.py
backend/app/services/: alert_blockchain.py  alert_verification.py  analytics.py  audit.py  blockchain_mock.py  blockchain_real.py  contract_onboarding.py  ingest_profiles.py  milestone.py  monitoring.py  notification.py  rule_engine.py
backend/app/workers/: no_data_checker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  (+5 more)
backend/tests/: conftest.py
frontend/: index.html  (+7 more)
(+230 files in other folders)
